src/component/span_tree/snapshots/envision__component__span_tree__snapshot_tests__snapshot_empty.snap
---
source: src/component/span_tree/snapshot_tests.rs
expression: terminal.backend().to_string()
---
┌──────────────────────────────────────────────────────────┐
│Label                         │ 0ms                       │
│──────────────────────────────┼───────────────────────────│
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
