src/component/span_tree/snapshots/envision__component__span_tree__snapshot_tests__snapshot_with_selection.snap
---
source: src/component/span_tree/snapshot_tests.rs
expression: terminal.backend().to_string()
---
┌ Trace ───────────────────────────────────────────────────┐
│Label                         │ 0ms       500ms         1s│
│──────────────────────────────┼───────────────────────────│
│▾ frontend/request            │███████████████████████████│
│    api/handler               │ ████████████████████      │
│    auth/validate             │█████                      │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
